--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,61 @@
 <!DOCTYPE html>
-<html>
+<html lang="ja">
   <head>
-    <title>VoiceLife3</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+    <title>VoiceLife</title>
+    <!-- Favicon-->
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <!-- Bootstrap Icons-->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Google fonts-->
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic" rel="stylesheet" type="text/css" />
+    <!-- SimpleLightbox plugin CSS-->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/SimpleLightbox/2.1.0/simpleLightbox.min.css" rel="stylesheet" />
+    <!-- Core theme CSS (includes Bootstrap)-->
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
+
+  <%= csrf_meta_tags %>
+  <%= csp_meta_tag %>
+  <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+  <nav class="navbar navbar-expand-lg navbar-light py-3" id="mainNav">
+    <div class="container px-4 px-lg-5">
+        <a class="navbar-brand" href="/">VoiceLife</a>
+        <!--<img src="/assets/top-icon3.png" width="40" height="40">-->
+        <%= image_tag 'top-icon3.png', size: '40x40' %>
+        <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <% if current_user %>
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+              <%= link_to(current_user.name, "/users/#{current_user.id}" , class: "nav-item",class: "nav-link") %>
+              <%= link_to("新規投稿", new_post_path, class: "nav-item",class: "nav-link") %>
+              <%= link_to("投稿一覧", posts_path, class: "nav-item",class: "nav-link") %>
+              <!--<li class="nav-item"><a class="nav-link" href= >ログアウト</a></li>-->
+              <%= link_to 'ログアウト', destroy_user_session_path, class: 'nav-item', class: 'nav-link', method: :delete %>
+              <!--<li class="nav-item"><a class="nav-link" href="#contact">お問い合せ</a></li>-->
+            </ul>
+          <% else %>
+            <ul class="navbar-nav ms-auto my-2 my-lg-0">
+              <a class="nav-link" class="nav-item" href="#about">VoiceLifeとは</a></li>
+              <a class="nav-link" href="#services">できること</a></li>
+              <!--<li class="nav-item"><a class="nav-link" href="#contact">新規登録</a></li>-->
+              <%= link_to("新規登録", new_user_registration_path, class: "nav-item",class: "nav-link") %>
+              <!--<li class="nav-item"><a class="nav-link" href="#contact">ログイン</a></li>-->
+              <%= link_to("ログイン", new_user_session_path, class: "nav-item",class: "nav-link") %>
+              <%= button_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, {method: :post, class: "nav-item", class: "nav-link" } %>
+              <!--<li class="nav-item"><a class="nav-link" href="#contact">お問い合せ</a></li>-->
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </nav>
+
 
   <body>
     <%= yield %>
