--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -52,7 +52,7 @@
     background-size: cover;
     // padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
-    background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896) 10%), url("background5.jpg");
+    background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896));
   }
 
   .user-container {
