--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -19,7 +19,7 @@
   background-attachment: scroll;
   background-size: cover;
   padding-top: 10rem;
-  background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896) 10%), url("background5.jpg");
+  background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896));
   }
 
   .post-container {
@@ -132,5 +132,5 @@
   .search-form {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
-    background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896) 10%), url("background5.jpg");
+    background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896);
   }
