background/エラー修正

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -132,5 +132,5 @@
   .search-form {
     padding-top: 10rem;
     padding-bottom: calc(10rem - 4.5rem);
-    background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896);
+    background: linear-gradient(to bottom, rgba(213, 213, 213, 0.896) 0%, rgba(213, 213, 213, 0.896));
   }
