--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,16 +24,16 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <% if current_user %>
             <ul class="navbar-nav ms-auto my-2 my-lg-0">
-              <%= link_to(current_user.name, "/users/#{current_user.id}" , class: "nav-item",class: "nav-link") %>
+              <%= link_to(current_user.name, "/users/#{current_user.id}" , class: "nav-item nav-link") %>
               <%= link_to("新規投稿", new_post_path, class: "nav-item nav-link") %>
               <%= link_to("投稿一覧", posts_path, class: "nav-item nav-link") %>
-              <%= link_to 'ログアウト', destroy_user_session_path, class: "nav-item",class: "nav-link", method: :delete %>
+              <%= link_to 'ログアウト', destroy_user_session_path, class: "nav-item nav-link", method: :delete %>
             </ul>
           <% else %>
             <ul class="navbar-nav ms-auto my-2 my-lg-0">
               <%= link_to("新規登録", new_user_registration_path, class: "nav-item nav-link") %>
               <%= link_to("ログイン", new_user_session_path, class: "nav-item nav-link") %>
-              <%= button_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, {method: :post, class: "nav-item nav-link" } %>
+              <%= button_to 'ゲストログイン（閲覧用）', homes_guest_sign_in_path, {method: :post, class: "nav-item nav-link"} %>
           <% end %>
         </div>
       </div>
