検索バーデザイン修正

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -11363,6 +11363,20 @@ hr.divider-light {
   font-size: 0.9rem;
   padding: 0.75rem 0;
 }
+
+.nav-buttom {
+  background-color: #fd6339;
+  color: #fff;
+  font-weight: 900;
+  padding: 0 1rem;
+  font-size: 0.9rem;
+  padding: 0rem 1.0rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10rem;
+}
+
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
   color: #f4623a;
 }
