--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -54,6 +54,18 @@
     padding-bottom: 32px;
     color: red;
   }
+
+  .submit-var {
+    border-radius: 1rem;
+    border-color:rgba(78, 78, 78, 0.896);
+    margin-right: 15px;
+    width: 300px;
+    height: 40px;
+  }
+
+  .submit-btn {
+    color: rgb(42, 41, 41);
+  }
   
   /* posts/show ================================ */
   .posts-show form {
