--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <div class="post-main posts-index">
   <div style='text-align: center;'>
     <%= form_with url: search_path, method: :get, local: true do |f| %>
-      <%= f.text_field :keyword, value: @keyword %>
-      <%= f.submit "検索" %>
+      <%= f.text_field :keyword, value: @keyword , class: 'submit-var' %>
+      <%= f.submit "検索" , class: 'submit-btn' %>
     <% end %>
   </div>
   <div class="post-container">
