--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <div class="user-main user-show">
   <div class="user-container">
-    <div class="user">
+    <div class="user-profile">
       <h2><%= @user.name %></h2>
       <p><%= @user.self_introduction %></p>
       <% if current_user.id %>
