コメント機能エラー削除

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,6 @@
 <div class="post-main posts-new">
   <div class="post-container">
-    <h1 class="form-heading">編集する！</h1>
+    <h1 class="form-heading">編集する</h1>
     <%= form_tag(post_path(@post), method: :put ) do %>
     <div class="form">
       <div class="form-body">
