--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-lg navbar-light py-3" id="mainNav">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="/">VoiceLife</a>
-        <!--<img src="/assets/top-icon3.png" width="40" height="40">-->
+        <img src="/top-icon3.png" width="40" height="40">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <% if current_user %>
