ユーザー画像表示機能追加

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -66,6 +66,11 @@
   .user-show {
     text-align: center;
   }
+
+  .user-image {
+    width: 30px;
+    height: 30px;
+  }
   
   .user-profile {
     margin-bottom: 20px;
