--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -4066,7 +4066,7 @@ textarea.form-control-lg {
 .navbar-brand {
   padding-top: 0.3125rem;
   padding-bottom: 0.3125rem;
-  margin-right: 1rem;
+  margin-right: 0.5rem;
   font-size: 1.25rem;
   text-decoration: none;
   white-space: nowrap;
@@ -11369,10 +11369,12 @@ hr.divider-light {
 .nav-buttom {
   background-color: #fd6339;
   color: #fff;
+  height: 30px;
+  margin-left: 20px;
   font-weight: 900;
   padding: 0 1rem;
   font-size: 0.9rem;
-  padding: 0rem 1.0rem;
+  padding: 0.2rem 1.0rem;
   font-weight: 700;
   text-transform: uppercase;
   border: none;
