--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
         <p>プロフィール</p>
         <input name="profile" value= "<%= @user.self_introduction %>">
         <p>画像</p>
-        <!--<input name="image" type="avatar">-->
+        <input name="avatar" type="file">
         <p>メールアドレス</p>
         <input name="email" value="<%= @user.email %>">
         <input type="submit" value="保存">
