--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,16 @@
       <p>
         <%= @post.content %>
       </p>
+      <p>いいね件数: <%= @post.likes.count %></p>
+      <% if current_user.already_liked?(@post) %>
+        <%= button_to 'いいねを取り消す', post_like_path(@post), method: :delete %>
+      <% else %>
+        <%= button_to 'いいね', post_likes_path(@post) %>
+      <% end %>
+      <p>いいねしたユーザー</p>
+      <% @post.liked_users.each do |user| %>
+        <li><%= user.name %></li>
+      <% end %>
       <% if @post.file.present? %> 
         <%= audio_tag @post.file_url, :controls => true %>
       <% end %>
