いいね機能/fontawesome適用

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -11381,6 +11381,10 @@ hr.divider-light {
   border-radius: 10rem;
 }
 
+.nav-buttom:hover {
+  color: black;
+}
+
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
   color: #f4623a;
 }
