検索ボタン/ユーザー画面修正

--- a/app/assets/stylesheets/homes.scss
+++ b/app/assets/stylesheets/homes.scss
@@ -11382,7 +11382,7 @@ hr.divider-light {
 }
 
 .nav-buttom:hover {
-  color: black;
+  color: rgb(50, 50, 50);
 }
 
 #mainNav .navbar-nav .nav-item .nav-link:hover, #mainNav .navbar-nav .nav-item .nav-link:active {
