--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,8 +1,8 @@
 <div class="post-main posts-index">
   <div style='text-align: center;'>
     <%= form_with url: search_path, method: :get, local: true do |f| %>
-      <%= f.text_field :keyword, value: @keyword , class: 'submit-var' %>
-      <%= f.submit "検索" , class: 'submit-btn' %>
+      <%= f.text_field :keyword, value: @keyword , class: 'submit-bar' , :placeholder => "キーワード検索" %>
+      <%= f.submit "検索" , class: 'submit-btn ' %>
     <% end %>
   </div>
   <div class="post-container">
@@ -17,7 +17,12 @@
         <% if post.file.present? %> 
           <%= audio_tag post.file_url, :controls => true %>
         <% end %>
-        いいね数：<%= post.liked_users.count %>
+        <% if post.liked_users.count %>
+          <i class="fas fa-heart unlike-btn" ></i>
+        <% else %>
+          <i class="fas fa-heart like-btn" ></i>
+        <% end %>
+        <%= post.liked_users.count %>
       </div>
     <% end %>
   </div>
