annotate適用/top下部アイコン変更

--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -31,21 +31,21 @@
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-gem fs-1 text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-mic-fill fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">音声投稿</h3>
-                        <p class="text-muted mb-0">簡単に音声ファイルを投稿し、他ユーザーの音声を視聴できます</p>
+                        <p class="text-muted mb-0">簡単に音声ファイルを投稿し、ユーザーの音声を視聴できます</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
-                        <h3 class="h4 mb-2">画像投稿</h3>
-                        <p class="text-muted mb-0">画像を投稿することができます</p>
+                        <div class="mb-2"><i class="bi-reply fs-1 text-primary"></i></div>
+                        <h3 class="h4 mb-2">コメント機能</h3>
+                        <p class="text-muted mb-0">ユーザーの投稿にコメントできます</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
+                        <div class="mb-2"><i class="bi-search fs-1 text-primary"></i></div>
                         <h3 class="h4 mb-2">ワード検索</h3>
                         <p class="text-muted mb-0">特定のワードが含まれている投稿を表示できます</p>
                     </div>
