--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,7 @@
       <div class="posts-index-item">
         <div class="post-right">
           <div class="post-user-name">
-            <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+            <%= post.user.created_at %) %>
           </div>
           <%= link_to(post.content, "/posts/#{post.id}") %>
         </div>
