--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -7,7 +7,7 @@
                     <hr class="divider" />
                 </div>
                 <div class="col-lg-8-2 align-self-baseline">
-                    <a class="btn btn-primary-1 btn-xl" href="#about" style="background-color: #fd6339; style= font-color:white">もっと詳しく</a>
+                    <a class="btn-primary btn-xl" href="#about" style="background-color: #fd6339; style= font-color:white">もっと詳しく</a>
                 </div>
             </div>
         </div>
@@ -19,7 +19,7 @@
                     <h2 class="text-white mt-0">声で発信したいあなたへ</h2>
                     <hr class="divider divider-light" />
                     <p class="text-white-75 mb-4">VoiceLifeは、声で簡単に発信できるSNSです。あなたの日常やイベントを声で表現してみましょう。</p>
-                    <a class="btn btn-light btn-xl" href="#services">始めてみよう！</a>
+                    <a class="btn btn-light" href="#services">始めてみよう！</a>
                 </div>
             </div>
         </div>
@@ -31,29 +31,29 @@
             <div class="row gx-4 gx-lg-5">
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-mic-fill fs-1 text-primary"></i></div>
-                        <h3 class="h4 mb-2">音声投稿</h3>
+                        <div class="mb-2"><i class="bi-mic-fill fs-1 text"></i></div>
+                        <h3 class="h4">音声投稿</h3>
                         <p class="text-muted mb-0">簡単に音声ファイルを投稿し、ユーザーの音声を視聴できます</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-reply fs-1 text-primary"></i></div>
-                        <h3 class="h4 mb-2">コメント機能</h3>
+                        <div class="mb-2"><i class="bi-reply fs-1 text"></i></div>
+                        <h3 class="h4">コメント機能</h3>
                         <p class="text-muted mb-0">ユーザーの投稿にコメントできます</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-search fs-1 text-primary"></i></div>
-                        <h3 class="h4 mb-2">ワード検索</h3>
+                        <div class="mb-2"><i class="bi-search fs-1 text"></i></div>
+                        <h3 class="h4">ワード検索</h3>
                         <p class="text-muted mb-0">特定のワードが含まれている投稿を表示できます</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="mt-5">
-                        <div class="mb-2"><i class="bi-heart fs-1 text-primary"></i></div>
-                        <h3 class="h4 mb-2">お気に入り機能</h3>
+                        <div class="mb-2"><i class="bi-heart fs-1 text"></i></div>
+                        <h3 class="h4">お気に入り機能</h3>
                         <p class="text-muted mb-0">気に入った投稿を、お気に入り登録することができます</p>
                     </div>
                 </div>
