--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,11 +9,11 @@
     <% @posts.each do |post| %>
       <div class="posts-index-item">
         <div class="post-right">
-        <div class="post-user-name">
-          <!--img src="<%= "/uploads/user/#{post.user.avatar}" %>">-->
-          <%= link_to(post.user.name, "/users/#{post.user.id}") %>
-        </div> 
-          <%= link_to(post.content, "/posts/#{post.id}") %>
+          <div class="post-user-name">
+            <%= image_tag post.user.avatar.url, class: 'user-image' %>
+            <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: black;") %>
+          </div> 
+          <%= link_to(post.content, "/posts/#{post.id}", style: "color: black;") %>
         </div>
         <% if post.file.present? %> 
           <%= audio_tag post.file_url, :controls => true %>
