--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,10 +1,11 @@
 <div class="post-main posts-index">
   <div class="post-container">
     <div class="posts-show-item">
+      <%= image_tag @user.avatar.url, class: 'user-image' %>
       <h2><%= @user.name %></h2>
       <p><%= @user.self_introduction %></p>
       <% if current_user.id %>
-        <%= link_to("編集", "/users/#{@user.id}/edit") %>
+        <%= link_to "編集", "/users/#{@user.id}/edit", style: "color: black;" %>
       <% end %>
     </div>
     <!--<ul class="user-tabs">
@@ -14,9 +15,9 @@
       <div class="posts-index-item">
         <div class="post-right">
           <div class="post-user-name">
-            <%= link_to(post.user.name, "/users/#{post.user.id}") %>
+            <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: black;") %>
           </div>
-          <%= link_to(post.content, "/posts/#{post.id}") %>
+          <%= link_to(post.content, "/posts/#{post.id}", style: "color: black;") %>
         </div>
       </div>
     <% end %>
