ページネーション追加

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -85,6 +85,11 @@
     vertical-align: middle;  
   }
   
+  .paginate {
+    background-color: #fd6339;
+    color:rgb(66, 55, 55);
+  }
+  
   /* posts/show ================================ */
   .posts-show form {
     display: inline;
