--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -71,6 +71,13 @@
     width: 30px;
     height: 30px;
   }
+
+  .user-image-header {
+    width: 30px;
+    height: 30px;
+    margin-top: 3px;
+    margin-left: -3px;
+  }
   
   .user-profile {
     margin-bottom: 20px;
