--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,45 +1,35 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>新規作成</title> 
-  <!--Bootsrap 4 CDN-->
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <!--Fontawesome CDN-->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
-</head>
-
 <header class="masthead">
 	<div class="d-flex justify-content-center h-100">
 		<div class="card">
-    <div class="card-header">
-      <h3>新規登録</h3>
-    </div>
-			<div class="card-header">
-          <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-            <%= render "devise/shared/error_messages", resource: resource %>
-            <div class="field">
-              <%= f.label :ユーザーネーム %> <br />
-              <%= f.text_field :name %>
-            </div>
-            <div class="field">
-              <%= f.label :メールアドレス %><br />
-              <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-            </div>
-            <div class="field">
-              <%= f.label :パスワード %>
-              <br />
-              <%= f.password_field :password, autocomplete: "new-password" %>
-            </div>
-            <div class="field">
-              <%= f.label :パスワード（確認） %><br />
-              <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-            </div>
-            <div class="form-group">
-						  <input type="submit" value="新規登録" class="btn float-right login_btn">
-					  </div>
-          <% end %>
-        </div>
+      <div class="card-header2">
+        <h3>新規登録</h3>
       </div>
+        <div class="card-header">
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+              <%= render "devise/shared/error_messages", resource: resource %>
+              <div class="field">
+                <%= f.label :ユーザーネーム %> <br />
+                <%= f.text_field :name %>
+              </div>
+              <div class="field">
+                <%= f.label :メールアドレス %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+              </div>
+              <div class="field">
+                <%= f.label :パスワード %>
+                <br />
+                <%= f.password_field :password, autocomplete: "new-password" %>
+              </div>
+              <div class="field">
+                <%= f.label :パスワード（確認） %><br />
+                <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+              </div>
+              <div class="form-group">
+                <input type="submit" value="新規登録" class="float-right login_btn">
+              </div>
+            <% end %>
+          </div>
+        </div>
   </div>
 </header>
 </body>
