--- a/app/views/homes/index.html.erb
+++ b/app/views/homes/index.html.erb
@@ -19,7 +19,7 @@
                     <h2 class="text-white mt-0">声で発信したいあなたへ</h2>
                     <hr class="divider divider-light" />
                     <p class="text-white-75 mb-4">VoiceLifeは、声で簡単に発信できるSNSです。あなたの日常やイベントを声で表現してみましょう。</p>
-                    <a class="btn btn-light" href="#services">始めてみよう！</a>
+                    <a class="btn-xl2" href="#services" style="background-color:white" style="color: black;">始めてみよう！</a>
                 </div>
             </div>
         </div>
