--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,18 +24,18 @@
   <nav class="navbar navbar-expand-lg navbar-light py-3" id="mainNav">
     <div class="container px-4 px-lg-5">
         <a class="navbar-brand" href="/">VoiceLife</a>
-        <img src="/top-icon3.png" width="40" height="40">
+        <img src="/top-icon3.png" width="35" height="35" style="margin-left: -8px;">
         <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <% if current_user %>
             <ul class="navbar-nav ms-auto my-2 my-lg-0">
               <%= link_to(current_user.name, "/users/#{current_user.id}" , class: "nav-item nav-link") %>
               <% if current_user.avatar? %>
-                <%= image_tag current_user.avatar.url, class: 'user-image' %>
+                <%= image_tag current_user.avatar.url, class: 'user-image-header' %>
               <% else %>
                 <%= image_tag "/assets/default.png", class: 'user-image' %>
               <% end %>
-              <%= link_to("新規投稿", new_post_path, class: "nav-buttom") %>
+              <%= link_to("新規投稿", new_post_path, class: "nav-buttom2") %>
               <%= link_to("投稿一覧", posts_path, class: "nav-item nav-link") %>
               <%= link_to 'ログアウト', destroy_user_session_path, class: "nav-item nav-link", method: :delete %>
             </ul>
