--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,22 +2,32 @@
   <div class="post-container">
     <% @posts.each do |post| %>
       <div class="posts-index-item">
-        <div class="post-right">
+        <div class="post-leght">
+          <div class="post-user-avatar">
+            <%= image_tag post.user.avatar.url, class: 'user-image', size: '500x240' %>
+          </div> 
           <div class="post-user-name">
-            <%= image_tag post.user.avatar.url, class: 'user-image' %>
             <%= link_to(post.user.name, "/users/#{post.user.id}", style: "color: black;") %>
           </div> 
+        </div>
+        <div class="post-user-content">
           <%= link_to(post.content, "/posts/#{post.id}", style: "color: black;") %>
         </div>
-        <% if post.file.present? %> 
-          <%= audio_tag post.file_url, :controls => true %>
-        <% end %>
-        <% if post.liked_users.count %>
-          <i class="fas fa-heart unlike-btn" ></i>
-        <% else %>
-          <i class="fas fa-heart like-btn" ></i>
-        <% end %>
-        <%= post.liked_users.count %>
+        <div class="post-user-audio">
+          <% if post.file.present? %> 
+            <%= audio_tag post.file_url, :controls => true %>
+          <% end %>
+        </div>
+        <div class="post-user-heart">
+          <% if post.liked_users.count %>
+            <i class="fas fa-heart unlike-btn" ></i>
+          <% else %>
+            <i class="fas fa-heart like-btn" ></i>
+          <% end %>
+        </div> 
+        <div class="post-user-heart-count"> 
+          <%= post.liked_users.count %>
+        </div>
       </div>
     <% end %>
     <br>
