--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
-<div class="user-main users-edit">
+<div class="user-main">
   <div class="user-container">
-    <div class="form-heading">ユーザー情報の編集</div>
+    <div class="user-edit-heading">ユーザー情報の編集</div>
     <div class="form users-form">
       <div class="form-body">
         <% @user.errors.full_messages.each do |message| %>            
