--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -31,7 +31,7 @@
     min-height: 74vh;
   }
 
-  .post-leght {
+  .post-left {
     float: left;
     width: 90%;
     padding-left: 25px;
@@ -41,6 +41,10 @@
     height: 100%;
     padding-bottom: 3px;
     color: rgb(66, 55, 55);
+  }
+
+  .post-user-right {
+    float: right;
   }
 
   .post-user-avatar img {
@@ -53,6 +57,13 @@
     font-weight: 600;
     color: rgb(66, 55, 55);
     font-size: 18px;
+    margin-top: 10px;
+    margin-left: 60px;
+  }
+
+  .post-user-right {
+    color:rgb(124, 124, 124);
+    margin-top: 13px;
   }
 
   .post-user-content {
