いいねランキング追加

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -167,6 +167,20 @@
     margin-bottom: 15px;
   }
 
+  .user-show-item {
+    padding: 20px 30px;
+    background-color: white;
+    overflow: hidden;
+    box-shadow: 0 2px 6px #c1ced7;
+  }
+
+  .user-index-item {
+    padding: 20px 30px;
+    background-color: white;
+    overflow: hidden;
+    box-shadow: 0 2px 6px #c1ced7;
+  }
+
   /* users/edit ================================ */
   .user-edit-heading {
     color: rgb(54, 52, 52) ;
