--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -3,6 +3,7 @@
     background-color: white;
     overflow: hidden;
     box-shadow: 0 2px 6px #c1ced7;
+    margin-left: - 300px;
   }
   
   .post-left img {
@@ -21,6 +22,7 @@
     padding-top: 3rem;
     padding-bottom: calc(23rem - 0rem);
     background: linear-gradient(to bottom, rgba(238, 238, 238, 0.896) 0%, rgba(238, 238, 238, 0.896));
+    display: flex;
   }
 
   .post-container {
@@ -50,7 +52,9 @@
   .post-user-avatar img {
     display: flex;
     float: left;
-    margin-right: 3px
+    margin-right: 3px;
+    margin-left: -35px;
+    width: 50px;
   }
   
   .post-user-name {
@@ -58,7 +62,7 @@
     color: rgb(66, 55, 55);
     font-size: 18px;
     margin-top: 10px;
-    margin-left: 60px;
+    margin-left: 20px;
   }
 
   .post-user-right {
@@ -70,19 +74,19 @@
     font-weight: 500;
     color: rgb(66, 55, 55);
     font-size: 18px;
-    margin-left: 30px;
+    margin-left: 45px;
     margin-bottom: 10px;
   }
 
   .post-user-audio {
-    margin-left: 20px;
+    margin-left: 30px;
   }
 
   .post-user-heart {
     float: left;
     margin-top: 10px;
     margin-right: 5px;
-    margin-left: 10px;
+    margin-left: 20px;
   }
 
   .post-user-heart-count {
@@ -127,7 +131,7 @@
     background-color: #fd6339;
     color:rgb(66, 55, 55);
   }
-  
+
   /* posts/show ================================ */
   .posts-show form {
     display: inline;
@@ -272,10 +276,6 @@
     height: 1.9em;
     display: inline-block;
     vertical-align: middle;  
-  }
-
-  .card {
-    display: flex;
   }
 
   /* posts/show ================================ */
