--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <header class="masthead">
 	<div class="d-flex justify-content-center h-100">
-		<div class="card">
+		<div class="user_new_card">
       <div class="card-header2">
         <h3>新規登録</h3>
       </div>
